client/camel-envoy-configmap.yaml
apiVersion: v1
data:
  config.json: |-
    {
      "listeners": [{
        "port": 9000,
        "filters": [{
          "type": "read",
          "name": "http_connection_manager",
          "config": {
            "codec_type": "auto",
            "stat_prefix": "ingress_http",
            "route_config": {
              "virtual_hosts": [
                {
                  "name": "helloswarm_service",
                  "domains": [
                    "*"
                  ],
                  "routes": [{
                    "timeout_ms": 0,
                    "prefix": "/say",
                    "cluster": "helloswarm_cluster"
                  }]
                }]
            },
            "filters": [{
              "type": "decoder",
              "name": "router",
              "config": {}
            }]
          }
        }]
      }],
      "admin": {
        "access_log_path": "/tmp/admin_access.log",
        "port": 9901
      },
      "cluster_manager": {
        "clusters": [{
          "name": "helloswarm_cluster",
          "connect_timeout_ms": 250,
          "type": "logical_dns",
          "lb_type": "round_robin",
          "hosts": [{
            "url": "tcp://helloswarm:80"
          }]
        }]
      }
    }
kind: ConfigMap
metadata:
  name: camel-envoy
